add font and image loaders

--- a/src/image-loader/src/index.html
+++ b/src/image-loader/src/index.html
@@ -14,8 +14,9 @@
     </head>
     <body>       
         <h1 id="header">This is my first webpack app </h1> 
-        <ul id="shoppingList">Shopping List</ul>
-        <button id="button1" class="button">Click</button>
+        <!-- <ul id="shoppingList">Shopping List</ul> -->
+        <!-- <button id="button1" class="button">Click</button> -->
+        <img id="logo"/>
         <!-- <script src="index.js"></script> -->
         <script src="./dist/bundle.js"></script>
     </body>
